--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     height: 100%;
     display: flex;
     justify-content: center;
+    font-family: 'Lato', sans-serif;
 }
 
 .wrapper {
@@ -18,18 +19,25 @@ body {
     display: none;
 }
 .title {
-    border: 1px solid #000;
     width: 500px;
     height: 300px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently
+                                    not supported by any browser */
 }
 .reset {
     margin: 10px;
     height: 30px;
     width: 200px;
+    cursor: pointer;
 }
 .table {
     width: 600px;
@@ -38,10 +46,35 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     border: 2px solid #000;
+    cursor: pointer;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently
+                                    not supported by any browser */
 }
 .table-cell {
     width: 200px;
     height: 200px;
     outline: 1px solid #000;
     font-size: 170px;
+}
+
+@media screen and (max-width: 480px) {
+    .title {
+        width: 100%;
+        height: 200px;
+    }
+    .table {
+        width: 300px;
+        height: 300px;
+    }
+    .table-cell {
+        width: 100px;
+        height: 100px;
+        outline: 1px solid #000;
+        font-size: 90px;
+    }
 }
